--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "name": "slug-gen",
   "version": "0.1.0",
-  "description": "Minimal slug generator for the browser and Node.js.",
+  "description": "Zero dependency slug generator for the browser and Node.js with transliteration support.",
+  "keywords": [
+    "slugify",
+    "slug",
+    "typescript",
+    "slug generator",
+    "string",
+    "utf8",
+    "utf-8",
+    "unicode",
+    "url",
+    "uri"
+  ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
