--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "tsc": "tsc",
-    "test": "mocha --reporter spec --require ts-node/register 'test/**/*.test.ts'"
+    "test": "mocha --reporter spec --require ts-node/register 'test/**/*.test.ts'",
+    "lint": "tsc --noEmit && eslint '{src, test}/**/*.{js,ts}'"
   },
   "repository": {
     "type": "git",
@@ -33,7 +34,12 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.7",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
     "chai": "^4.2.0",
+    "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
     "prettier": "^1.18.2",
     "ts-node": "^8.3.0",
