Added separator option.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "keywords": [
     "slugify",
     "slug",
-    "typescript",
+    "slugify",
     "slug generator",
+    "typescript",
     "string",
     "utf8",
     "utf-8",
